--- a/viz/index.html
+++ b/viz/index.html
@@ -34,6 +34,10 @@
 
   <body>
     <h1>SOT: Satellite Orbit Tracker</h1>
+    <span id='basic-modal1'><input type='button' name='basic' value='Instructions' class='modal'/></span>
+      or
+    <span id='basic-modal2'><input type='button' name='basic' value='Statistics' class='modal'/></span>
+    </div>
     <form id="controls">
       <div id="controls_visual">
         <span>
@@ -125,5 +129,7 @@
     <script src="index.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="static/js/jquery-1.8.3.min.js"><\/script>')</script>
+    <script src="static/js/jquery.simplemodal.js"></script>
+    <script src="static/js/main.js"></script>
   </body>
 </html>
