--- a/viz/index.html
+++ b/viz/index.html
@@ -26,10 +26,13 @@
     <script type="text/javascript" src="tle.js"></script>
 
     <script type="text/javascript" src="cesium/Cesium.js"></script>
-    <script type="text/javascript" src="static/js/modernizr.js"></script> <!-- There is a minified one to use... -->
+    <script type="text/javascript" src="static/js/modernizr-2.6.2.min.js"></script> <!-- There is a minified one to use... -->
 
     <link rel="stylesheet" href="static/css/normalize.css">
     <link rel="stylesheet" href="static/css/main.css">
+
+
+    <script type="text/javascript" src="static/js/modernizr_load.js"></script>
   </head>
 
   <body>
@@ -125,11 +128,5 @@
         specific satellite from a group to highlight it and move the
         camera to its position.</p>
     </div>
-
-    <script src="index.js" type="text/javascript"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="static/js/jquery-1.8.3.min.js"><\/script>')</script>
-    <script src="static/js/jquery.simplemodal.js"></script>
-    <script src="static/js/main.js"></script>
   </body>
 </html>
