--- a/viz/index.html
+++ b/viz/index.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
     <title>SOT: Satellite Orbit Tracker</title>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <script>
       opsmode = 'i'; //GLOBAL for intl, 'i'mproved
     </script>
@@ -33,38 +34,34 @@
     <link href="static/css/main.css" rel="stylesheet">
 
     <script type="text/javascript" src="static/js/modernizr_load.js"></script>
+
+    <!--[if lt IE 9]>
+    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
+    <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
+    <![endif]-->
   </head>
 
   <body>
-    <h1>SOT: Satellite Orbit Tracker</h1>
-    <span id='basic-modal1'><input type='button' name='basic' value='Instructions' class='modal'/></span>
-      or
-    <span id='basic-modal2'><input type='button' name='basic' value='Statistics' class='modal'/></span>
-    </div>
-    <form id="controls">
-      <div id="controls_visual">
-        <span>
-          <label>Earth View:
+    <div class="container" class="row-fluid">
+      <h1>SOT: Satellite Orbit Tracker</h1>
+      <div id="map_controls"class="span12">
+        <form id="controls">
+          <div id="controls_visual">
+            <label for="select_view">Earth View:</label>
             <select id="select_view"> <!-- handler attached by JS -->
               <option value="3D">3D</option>
               <option value="2.5D">2.5D</option>
               <option value="2D">2D</option>
             </select>
-          </label>
-        </span>
-        <span>
-          <label>Map Provider:
+            <label for="select_tile_provider">Map Provider:</label>
             <select id="select_tile_provider">
               <option value="bing">Bing maps</option>
               <option value="osm">OpenStreetMap</option>
               <option value="static">static file (no net)</option>
             </select>
-          </label>
-        </span>
-      </div>
-      <div id="controls_satellite">
-        <span>
-          <label>Satellite Group:
+          </div>
+          <div id="controls_satellite">
+            <label for="select_satellite_group">Satellite Group:</label>
             <select id="select_satellite_group">
               <option value="SMD">NASA Science</option>
               <option value="iss">ISS</option>
@@ -72,84 +69,81 @@
               <option value="science">Science</option>
               <option value="geo">Geosynchronous</option>
             </select>
-          </label>
-        </span>
-        <span>
-          <label>Select Satellite:
+            <label for="select_satellite">Select Satellite:</label>
             <select id="select_satellite">
             </select>
-          </label>
-        </span>
-      </div>
-    </form>
+          </div>
+        </form>
 
-    <!-- Button to trigger modal -->
-    <a href="#instructions" role="button" class="btn" data-toggle="modal">Instructions</a>
-
-    <a href="#statistics" role="button" class="btn" data-toggle="modal">Show Statistics</a>
-
-
-    <div class="popup" id="satellite_popup" style="display:none;"></div>
-
-    <div id="cesiumContainer">
-      <!-- Cesium jQuery updates this with onResize at startup -->
-      <canvas id="glCanvas" width="300" height="300" tabindex="1"></canvas>
-    </div>
-
-    <!-- Modal for Statistics-->
-    <div id="statistics" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="statisticsLabel" aria-hidden="true">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3 id="statisticsLabel">Satellite Statistics</h3>
+        <div id="modalControls">
+        <a href="#instructions" role="button" class="btn" data-toggle="modal">Instructions</a>
+        <a href="#statistics" role="button" class="btn" data-toggle="modal">Show Statistics</a>
+        </div>
       </div>
-      <div class="modal-body">
-        <div id="date">Date</div>
-          <table id="positions">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>ID</th>
-                <th>X Km</th>
-                <th>Y Km</th>
-                <th>Z Km</th>
-                <th>Velocity (BUG)</th>
-                <th>Latitude</th>
-                <th>Longitude (BUG)</th>
-                <th>Height Km/? (BUG)</th>
-              </tr>
-            </thead>
-            <!-- tbody destroyed and recreated by javascript -->
-          </table>
-      </div>
-      <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-      </div>
-    </div>
 
-    <!-- Modal for Instructions -->
-    <div id="instructions" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="instructionsLabel" aria-hidden="true">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3 id="instructionsLabel">Instructions</h3>
+      <div class="popup" id="satellite_popup" style="display:none;"></div>
+
+      <div id="cesiumContainer" class="span12">
+        <!-- Cesium jQuery updates this with onResize at startup -->
+        <canvas id="glCanvas" tabindex="1"></canvas>
       </div>
-      <div class="modal-body">
-        <p>
-            The satellites are displayed based on calculated position; you
-            can watch them move but it helps to zoom in a bit. You may have
-            to zoon out quite a bit to see satellites with very large
-            orbits. You can rotate the Earth and zoom in or out. If you've
-            allowed geolocation in your browser, a marker will show your
-            current position.</p>
-          <p>Hover over a satelite icon to show its name. Click it to bring
-            up pages/tabs that provide details
-            from <a href="http://science.nasa.gov/">Science.nasa.gov</a>
-            and <a href="http://nssdc.gsfc.nasa.gov/">NSSDC</a>. Select a
-            specific satellite from a group to highlight it and move the
-            camera to its position.</p>
+
+      <!-- Modal for Statistics-->
+      <div id="statistics" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="statisticsLabel" aria-hidden="true">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h3 id="statisticsLabel">Satellite Statistics</h3>
+        </div>
+        <div class="modal-body">
+          <div id="date">Date</div>
+            <table id="positions">
+              <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>ID</th>
+                  <th>X Km</th>
+                  <th>Y Km</th>
+                  <th>Z Km</th>
+                  <th>Velocity (BUG)</th>
+                  <th>Latitude</th>
+                  <th>Longitude (BUG)</th>
+                  <th>Height Km/? (BUG)</th>
+                </tr>
+              </thead>
+              <!-- tbody destroyed and recreated by javascript -->
+            </table>
+        </div>
+        <div class="modal-footer">
+          <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+        </div>
       </div>
-      <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+
+      <!-- Modal for Instructions -->
+      <div id="instructions" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="instructionsLabel" aria-hidden="true">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h3 id="instructionsLabel">Instructions</h3>
+        </div>
+        <div class="modal-body">
+          <p>
+              The satellites are displayed based on calculated position; you
+              can watch them move but it helps to zoom in a bit. You may have
+              to zoon out quite a bit to see satellites with very large
+              orbits. You can rotate the Earth and zoom in or out. If you've
+              allowed geolocation in your browser, a marker will show your
+              current position.</p>
+            <p>Hover over a satelite icon to show its name. Click it to bring
+              up pages/tabs that provide details
+              from <a href="http://science.nasa.gov/">Science.nasa.gov</a>
+              and <a href="http://nssdc.gsfc.nasa.gov/">NSSDC</a>. Select a
+              specific satellite from a group to highlight it and move the
+              camera to its position.</p>
+        </div>
+        <div class="modal-footer">
+          <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+        </div>
       </div>
+
     </div>
 <script src="index.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
