Moving Chrome Frame to not_supported
Saves compete between Modernizr and Chrome Frame.

--- a/viz/not_supported.html
+++ b/viz/not_supported.html
@@ -30,6 +30,11 @@
 
     <link rel="stylesheet" href="static/css/normalize.css">
     <link rel="stylesheet" href="static/css/not_supported.css">
+
+    <!--[if IE]>
+    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
+    <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
+    <![endif]-->
   </head>
 
   <body>
