WebGL resize modification.
WebGL was rendering oddly. Fixed it. [Fixes issue #71]

--- a/viz/index.html
+++ b/viz/index.html
@@ -87,7 +87,7 @@
 
     <div id="cesiumContainer">
       <!-- Cesium jQuery updates this with onResize at startup -->
-      <canvas id="glCanvas" width="300" height="300" tabindex="1"></canvas>
+      <canvas id="glCanvas"></canvas>
     </div>
 
 
