Adding Chrome Frame
Adding Chrome Frame to not supported.[#76]

--- a/viz/index.html
+++ b/viz/index.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
     <title>SOT: Satellite Orbit Tracker</title>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <script>
       opsmode = 'i'; //GLOBAL for intl, 'i'mproved
     </script>
@@ -32,7 +33,6 @@
     <link rel="stylesheet" href="static/css/main.css">
 
 
-    <script type="text/javascript" src="static/js/modernizr_load.js"></script>
   </head>
 
   <body>
@@ -128,5 +128,7 @@
         specific satellite from a group to highlight it and move the
         camera to its position.</p>
     </div>
+
+    <script type="text/javascript" src="static/js/modernizr_load.js"></script>
   </body>
 </html>
