--- a/viz/index.html
+++ b/viz/index.html
@@ -27,11 +27,30 @@
     <script type="text/javascript" src="tle.js"></script>
 
     <script type="text/javascript" src="cesium/Cesium.js"></script>
-    <script type="text/javascript" src="static/js/modernizr-2.6.2.min.js"></script> <!-- There is a minified one to use... -->
+    <script type="text/javascript" src="static/js/modernizr-2.6.2.min.js"></script>
 
     <link rel="stylesheet" href="static/css/normalize.css">
     <link rel="stylesheet" href="static/css/main.css">
-
+    <script type="text/javascript">
+      window.onload = function() {
+        if(window.externalHost){
+          console.log('with chrome frame')
+          var s = document.createElement('script');
+          s.type = 'text/javascript';
+          s.src = 'static/js/modernizr_load_ie.js';
+          var x = document.getElementsByTagName('script')[0];
+          x.parentNode.insertBefore(s, x);
+        }
+        else{
+          console.log('without chrome frame')
+          var s = document.createElement('script');
+          s.type = 'text/javascript';
+          s.src = 'static/js/modernizr_load.js';
+          var x = document.getElementsByTagName('script')[0];
+          x.parentNode.insertBefore(s, x);
+        }
+      }
+    </script>
 
   </head>
 
@@ -128,7 +147,5 @@
         specific satellite from a group to highlight it and move the
         camera to its position.</p>
     </div>
-
-    <script type="text/javascript" src="static/js/modernizr_load.js"></script>
   </body>
 </html>
