--- a/viz/not_supported.html
+++ b/viz/not_supported.html
@@ -30,11 +30,44 @@
 
     <link rel="stylesheet" href="static/css/normalize.css">
     <link rel="stylesheet" href="static/css/not_supported.css">
+
+    <!--[if IE]>
+    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script>
+    <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
+    <![endif]-->
+
+    <script type="text/javascript">
+      var QueryString = function () {
+        // This function is anonymous, is executed immediately and
+        // the return value is assigned to QueryString!
+        var query_string = {};
+        var query = window.location.search.substring(1);
+        var vars = query.split("&");
+        for (var i=0;i<vars.length;i++) {
+          var pair = vars[i].split("=");
+            // If first entry with this name
+          if (typeof query_string[pair[0]] === "undefined") {
+            query_string[pair[0]] = pair[1];
+            // If second entry with this name
+          } else if (typeof query_string[pair[0]] === "string") {
+            var arr = [ query_string[pair[0]], pair[1] ];
+            query_string[pair[0]] = arr;
+            // If third or later entry with this name
+          } else {
+            query_string[pair[0]].push(pair[1]);
+          }
+        }
+          return query_string;
+      } ();
+      window.onload = function(){
+        document.getElementById('failure').innerHTML = QueryString.failure
+      }
+    </script>
   </head>
 
   <body>
     <h1>Not Supported.</h1>
-    <p>Unfortunately, your browser is not supported.</p>
+    <p>Unfortunately, your browser does not support <span id="failure"></span>.</p>
     <form id="controls">
       <div id="controls_satellite">
         <span>
