Standardizing some sizes.

--- a/viz/index.html
+++ b/viz/index.html
@@ -55,17 +55,61 @@
     <div id="wrapper">
       <div id="header">
         <h1>SOT: Satellite Orbit Tracker</h1>
-        <img src="static/images/on-reset.png" id="reset_button"/>
-        <img src="static/images/on-instructions.png" id="instruction_button"/>
-        <img src="static/images/on-display-options.png" id="display_button"/>
-        <img src="static/images/perspective-3d.png" id="three_d_display_button"/>
-        <img src="static/images/perspective-2point5d.png" id="columbus_display_button"/>
-        <img src="static/images/perspective-2d.png" id="two_d_display_button"/>
-        <img src="static/images/on-select-satellite.png" id="satellite_button"/>
-        <img src="static/images/on-live-data.png" id="live_data_button"/>
-        <img src="static/images/map-bing.png" id="bing_data_button"/>
-        <img src="static/images/mao-openstreet.png" id="osm_data_button"/>
-        <img src="static/images/map-static.png" id="static_data_button"/>
+        <img src="static/images/on-reset.png"
+             id="reset_button"
+             height="50px"
+             width="50px"
+             alt="Reset" />
+        <img src="static/images/on-instructions.png"
+             id="instruction_button"
+             height="50px"
+             width="50px"
+             alt="Instructions" />
+        <img src="static/images/on-display-options.png"
+             id="display_button"
+             height="50px"
+             width="50px"
+             alt="Display Options" />
+        <img src="static/images/perspective-3d.png"
+             id="three_d_display_button"
+             height="50px"
+             width="50px"
+             alt="Display 3D" />
+        <img src="static/images/perspective-2point5d.png"
+             id="columbus_display_button"
+             height="50px"
+             width="50px"
+             alt="Display Columbus View" />
+        <img src="static/images/perspective-2d.png"
+             id="two_d_display_button"
+             height="50px"
+             width="50px"
+             alt="Display 2D" />
+        <img src="static/images/on-select-satellite.png"
+             id="satellite_button"
+             height="50px"
+             width="50px"
+             alt="Select Satellite" />
+        <img src="static/images/on-live-data.png"
+             id="live_data_button"
+             height="50px"
+             width="50px"
+             alt="Select Map Type" />
+        <img src="static/images/map-bing.png"
+             id="bing_data_button"
+             height="50px"
+             width="50px"
+             alt="Select Bing Map" />
+        <img src="static/images/mao-openstreet.png"
+             id="osm_data_button"
+             height="50px"
+             width="50px"
+             alt="Select OSM Map" />
+        <img src="static/images/map-static.png"
+             id="static_data_button"
+             height="50px"
+             width="50px"
+             alt="Select Static Map" />
       </div>
       <div id="nav">
 <!--         <div id="modals">
