--- a/viz/index.html
+++ b/viz/index.html
@@ -4,7 +4,9 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
-    <title>SOT: Satellite Orbit Tracker</title>
+    <title>
+      SOT: Satellite Orbit Tracker
+    </title>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <script>
       opsmode = 'i'; //GLOBAL for intl, 'i'mproved
@@ -54,91 +56,75 @@
   <body>
     <div id="wrapper">
       <div id="header">
-        <h1>SOT: Satellite Orbit Tracker</h1>
+        <h1>
+          SOT: Satellite Orbit Tracker
+        </h1>
         <img src="static/images/on-reset.png"
              id="reset_button"
              height="50px"
              width="50px"
-             alt="Reset" />
+             title="Reset" />
         <img src="static/images/on-instructions.png"
-             id="instruction_button"
+             id="instructions_button"
              height="50px"
              width="50px"
-             alt="Instructions" />
+             title="Instructions" />
         <img src="static/images/on-display-options.png"
              id="display_button"
              height="50px"
              width="50px"
-             alt="Display Options" />
-        <img src="static/images/perspective-3d.png"
-             id="three_d_display_button"
-             height="50px"
-             width="50px"
-             alt="Display 3D" />
-        <img src="static/images/perspective-2point5d.png"
-             id="columbus_display_button"
-             height="50px"
-             width="50px"
-             alt="Display Columbus View" />
-        <img src="static/images/perspective-2d.png"
-             id="two_d_display_button"
-             height="50px"
-             width="50px"
-             alt="Display 2D" />
+             title="Display Options" />
         <img src="static/images/on-select-satellite.png"
              id="satellite_button"
              height="50px"
              width="50px"
-             alt="Select Satellite" />
-        <img src="static/images/on-live-data.png"
-             id="live_data_button"
-             height="50px"
-             width="50px"
-             alt="Select Map Type" />
-        <img src="static/images/map-bing.png"
-             id="bing_data_button"
-             height="50px"
-             width="50px"
-             alt="Select Bing Map" />
-        <img src="static/images/mao-openstreet.png"
-             id="osm_data_button"
-             height="50px"
-             width="50px"
-             alt="Select OSM Map" />
-        <img src="static/images/map-static.png"
-             id="static_data_button"
-             height="50px"
-             width="50px"
-             alt="Select Static Map" />
-      </div>
-      <div id="nav">
-        <div id="instructions">
-          <h2>Instructions</h2>
-          <p>
-            The satellites are displayed based on calculated position; you
-            can watch them move but it helps to zoom in a bit. You may have
-            to zoon out quite a bit to see satellites with very large
-            orbits. You can rotate the Earth and zoom in or out. If you've
-            allowed geolocation in your browser, a marker will show your
-            current position.
-          </p>
-          <p>
-            Hover over a satelite icon to show its name. Click it to bring
-            up pages/tabs that provide details
-            from <a href="http://science.nasa.gov/">Science.nasa.gov</a>
-            and <a href="http://nssdc.gsfc.nasa.gov/">NSSDC</a>. Select a
-            specific satellite from a group to highlight it and move the
-            camera to its position.
-          </p>
-          <input type="button" id="instruction_close" value="Close" />
-        </div>
-        <div id="nav_buttons">
-          <form id="controls">
+             title="Select Satellite" />
+      </div> <!-- /header -->
+      <div id="main">
+        <div class="popup" id="satellite_popup" style="display:none;"></div>
+        <div id="cesiumContainer">
+          <!-- Cesium jQuery updates this with onResize at startup -->
+          <canvas id="glCanvas" width="300" height="300" tabindex="1"></canvas>
+        </div> <!-- /cesiumContainer -->
+      </div> <!-- /main -->
+      <div id="instructions">
+        <input type="button" id="instructions_close" value="&times;" class="button" />
+        <h2>
+          Instructions
+        </h2>
+        <p>
+          The satellites are displayed based on calculated position; you
+          can watch them move but it helps to zoom in a bit. You may have
+          to zoon out quite a bit to see satellites with very large
+          orbits. You can rotate the Earth and zoom in or out. If you've
+          allowed geolocation in your browser, a marker will show your
+          current position.
+        </p>
+        <p>
+          Hover over a satelite icon to show its name. Click it to bring
+          up pages/tabs that provide details
+          from <a href="http://science.nasa.gov/">Science.nasa.gov</a>
+          and <a href="http://nssdc.gsfc.nasa.gov/">NSSDC</a>. Select a
+          specific satellite from a group to highlight it and move the
+          camera to its position.
+        </p>
+      </div> <!-- /insructions -->
+      <div id="satellite_form">
+        <input type="button" id="satellite_form_close" value="&times;" class="button" />
+        <form id="controls">
+          <fieldset>
+            <legend>
+              Select a Satellite:
+            </legend>
             <div id="controls_satellite">
               <span>
-                <label><h2>Satellite Group:</h2>
-                  <select id="select_satellite_group">
-                    <option value="SMD">NASA Science</option>
+                <label for="select_satellite_group">
+                  Satellite Group:
+                </label><br />
+                <select id="select_satellite_group">
+                  <option value="SMD">
+                    NASA Science
+                  </option>
                     <optgroup label="From Celestrak">
                       <!-- nested optgroups not indented by browsers; use CSS? -->
                       <optgroup label="Special Interest">
@@ -193,27 +179,86 @@
                         <option value="radar"> Radar Calibration</option>
                       </optgroup>
                     </optgroup> <!-- Celestrak -->
-                  </select>
-                </label>
+                </select>
               </span>
               <span>
-                <label><h3>Select Satellite:</h3>
-                  <select id="select_satellite">
-                  </select>
-                </label>
+                <label>
+                  Select Satellite:
+                </label><br />
+                <select id="select_satellite">
+                </select>
               </span>
-            </div>
-          </form>
-          <input type="button" id="satellite_close" value="Close" />
-        </div>
-        <div class="popup" id="satellite_popup" style="display:none;"></div>
-      </div>
-      <div id="main">
-        <div id="cesiumContainer">
-          <!-- Cesium jQuery updates this with onResize at startup -->
-          <canvas id="glCanvas" width="300" height="300" tabindex="1"></canvas>
-          </div>
-      </div>
-    </div>
+            </div> <!-- /controls_satellite -->
+          </fieldset>
+        </form>
+      </div> <!-- /satellite_form -->
+      <div id="map_display">
+        <input type="button" id="map_display_close" value="&times;" class="button" />
+        <h2>Map Display Options</h2>
+        <h3>Maps:</h3>
+        <img src="static/images/map-bing.png"
+             id="bing_data_button"
+             title="Select Bing Map" />
+        <img src="static/images/mao-openstreet.png"
+             id="osm_data_button"
+             title="Select OSM Map" />
+        <img src="static/images/map-static.png"
+             id="static_data_button"
+             title="Select Static Map" />
+        <h3>Perspective</h3>
+        <img src="static/images/perspective-3d.png"
+             id="three_d_display_button"
+             title="Display 3D" />
+        <img src="static/images/perspective-2point5d.png"
+             id="columbus_display_button"
+             title="Display Columbus View" />
+        <img src="static/images/perspective-2d.png"
+             id="two_d_display_button"
+             title="Display 2D" />
+      </div> <!-- /map_display -->
+      <div id="satellite_display">
+        <input type="button" id="satellite_display_close" value="&times;" class="button" />
+        <h2 id="satellite_name">Satellite Information:</h2>
+        <p id="sat_data"></p>
+        <table border="1">
+          <tr>
+            <th>ID</th>
+            <td id="satellite_id">128312912</td>
+          </tr>
+          <tr>
+            <th>X Km</th>
+            <td id="satellite_x">test</td>
+          </tr>
+          <tr>
+            <th>Y Km</th>
+            <td id="satellite_y">test</td>
+          </tr>
+          <tr>
+            <th>Z Km</th>
+            <td id="satellite_z">test</td>
+          </tr>
+          <tr>
+            <th>Velocity</th>
+            <td id="satellite_velocity">test</td>
+          </tr>
+          <tr>
+            <th>Latitude</th>
+            <td id="satellite_latitude">test</td>
+          </tr>
+          <tr>
+            <th>Longitude</th>
+            <td id="satellite_longitude">test</td>
+          </tr>
+          <tr>
+            <th>Height</th>
+            <td id="satellite_height">test</td>
+          </tr>
+        </table>
+        <h3>More Information</h3>
+        <a href="#">Science.NASA.gov</a><br />
+        <a href="#">NSSDC</a>
+      </div> <!-- /satellite_display -->
+
+    </div> <!-- /wrapper -->
   </body>
 </html>
