UX Update Satellite Details Panel

--- a/viz/index.html
+++ b/viz/index.html
@@ -223,40 +223,40 @@
         <table border="1">
           <tr>
             <th>ID</th>
-            <td id="satellite_id">128312912</td>
+            <td id="satellite_id"></td>
           </tr>
           <tr>
             <th>X Km</th>
-            <td id="satellite_x">test</td>
+            <td id="satellite_x"></td>
           </tr>
           <tr>
             <th>Y Km</th>
-            <td id="satellite_y">test</td>
+            <td id="satellite_y"></td>
           </tr>
           <tr>
             <th>Z Km</th>
-            <td id="satellite_z">test</td>
+            <td id="satellite_z"></td>
           </tr>
           <tr>
             <th>Velocity</th>
-            <td id="satellite_velocity">test</td>
+            <td id="satellite_velocity"></td>
           </tr>
           <tr>
             <th>Latitude</th>
-            <td id="satellite_latitude">test</td>
+            <td id="satellite_latitude"></td>
           </tr>
           <tr>
             <th>Longitude</th>
-            <td id="satellite_longitude">test</td>
+            <td id="satellite_longitude"></td>
           </tr>
           <tr>
             <th>Height</th>
-            <td id="satellite_height">test</td>
+            <td id="satellite_height"></td>
           </tr>
         </table>
         <h3>More Information</h3>
-        <a href="#">Science.NASA.gov</a><br />
-        <a href="#">NSSDC</a>
+        <a id="science_url"href="#" target="_nasaScience">Science.NASA.gov</a><br />
+        <a id="nssdc_url" href="#"target="_nssdc">NSSDC</a>
       </div> <!-- /satellite_display -->
 
     </div> <!-- /wrapper -->
