FullScreen works on FireFox, Safari, Chrome
But we lose the UI controls and clock due to styling.

--- a/viz/index.html
+++ b/viz/index.html
@@ -79,6 +79,11 @@
              height="50px"
              width="50px"
              title="Select Satellite" />
+        <img src="static/images/on-fullscreen.png"
+             id="fullscreen_button"
+             height="50px"
+             width="50px"
+             title="Use Full Screen" />
       </div> <!-- /header -->
       <div id="main">
         <div class="popup" id="satellite_popup" style="display:none;"></div>
