Typos and HTML5 Validation

--- a/viz/index.html
+++ b/viz/index.html
@@ -7,7 +7,7 @@
     <title>
       SOT: Satellite Orbit Tracker
     </title>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <script>
       opsmode = 'i'; //GLOBAL for intl, 'i'mproved
     </script>
