Added Hover-Over on Global Display Panel

--- a/viz/index.html
+++ b/viz/index.html
@@ -84,7 +84,7 @@
                  id="satellite_button"
                  title="Select Satellite"
                  alt="Select Satellite" />
-            <img src="static/images/on-fullscreen.png"
+            <img src="static/images/Expand_1.png"
                  class="hud_button"
                  id="fullscreen_button"
                  title="Use Full Screen"
@@ -216,34 +216,48 @@
               <img src="static/images/Bing_1.png"
                    id="bing_data_button"
                    title="Select Bing Map"
-                   alt="Select Bing Map" />
+                   alt="Select Bing Map"
+                   onmouseover="this.src='static/images/Bing_2.png'"
+                   onmouseout="this.src='static/images/Bing_1.png'"/>
               <img src="static/images/OpenStreet_1.png"
                    id="osm_data_button"
                    title="Select OSM Map"
-                   alt="Select OSM Map" />
+                   alt="Select OSM Map"
+                   onmouseover="this.src='static/images/OpenStreet_2.png'"
+                   onmouseout="this.src='static/images/OpenStreet_1.png'"/>
               <img src="static/images/ArcGis_1.png"
                    id="arcgis_data_button"
                    title="Select ArcGIS Map"
-                   alt="Select ArcGIS Map" />
+                   alt="Select ArcGIS Map"
+                   onmouseover="this.src='static/images/ArcGis_2.png'"
+                   onmouseout="this.src='static/images/ArcGis_1.png'"/>
               <img src="static/images/Offline_1.png"
                    id="static_data_button"
                    title="Select Offline Map"
-                   alt="Select Offline Map" />
+                   alt="Select Offline Map"
+                   onmouseover="this.src='static/images/Offline_2.png'"
+                   onmouseout="this.src='static/images/Offline_1.png'"/>
             </div><br> <!-- /map_display -->
             <div id="perpective">
               <img src="static/images/Perspective.png" alt="Perspective"><br>
               <img src="static/images/3D_1.png"
                    id="three_d_display_button"
                    title="Display 3D"
-                   alt="Display 3D" />
+                   alt="Display 3D"
+                   onmouseover="this.src='static/images/3D_2.png'"
+                   onmouseout="this.src='static/images/3D_1.png'"/>
               <img src="static/images/2.5D_1.png"
                    id="columbus_display_button"
                    title="Display Columbus View"
-                   alt="Display Columbus View" />
+                   alt="Display Columbus View"
+                   onmouseover="this.src='static/images/2.5D_2.png'"
+                   onmouseout="this.src='static/images/2.5D_1.png'"/>
               <img src="static/images/2D_1.png"
                    id="two_d_display_button"
                    title="Display 2D"
-                   alt="Display 2D" />
+                   alt="Display 2D"
+                   onmouseover="this.src='static/images/2D_2.png'"
+                   onmouseout="this.src='static/images/2D_1.png'"/>
             </div> <!-- /perspective -->
           </div> <!-- /map_display -->
           <div id="satellite_display" class="modal">
