Update Close Button

--- a/viz/index.html
+++ b/viz/index.html
@@ -93,7 +93,7 @@
           <!-- Cesium jQuery updates this with onResize at startup -->
           <canvas id="glCanvas" width="300" height="300" tabindex="1"></canvas>
           <div id="instructions" class="modal">
-            <img src="static/images/x.png"
+            <img src="static/images/close.png"
                  id="instructions_close"
                  title="Close Button"
                  alt="Close Button"
@@ -119,7 +119,7 @@
             </p>
           </div> <!-- /insructions -->
           <div id="satellite_form" class="modal">
-            <img src="static/images/x.png"
+            <img src="static/images/close.png"
                  id="satellite_form_close"
                  title="Close Button"
                  alt="Close Button"
@@ -205,7 +205,7 @@
             </form>
           </div> <!-- /satellite_form -->
           <div id="map_display" class="modal">
-            <img src="static/images/x.png"
+            <img src="static/images/close.png"
                  id="map_display_close"
                  title="Close Button"
                  alt="Close Button"
@@ -261,7 +261,7 @@
             </div> <!-- /perspective -->
           </div> <!-- /map_display -->
           <div id="satellite_display" class="modal">
-            <img src="static/images/x.png"
+            <img src="static/images/close.png"
                  id="satellite_display_close"
                  title="Close Button"
                  alt="Close Button"
